@@ -21,16 +21,19 @@ package org.apache.hadoop.yarn.server.nodemanager.webapp.dao;
 import static org.apache.hadoop.yarn.util.StringHelper.join;
 import static org.apache.hadoop.yarn.util.StringHelper.ujoin;
 
-import javax.xml.bind.annotation.XmlAccessType;
-import javax.xml.bind.annotation.XmlAccessorType;
-import javax.xml.bind.annotation.XmlRootElement;
-import javax.xml.bind.annotation.XmlTransient;
+import javax.xml.bind.annotation.*;
 
 import org.apache.hadoop.yarn.api.records.ContainerExitStatus;
+import org.apache.hadoop.yarn.api.records.ContainerId;
 import org.apache.hadoop.yarn.api.records.ContainerStatus;
 import org.apache.hadoop.yarn.api.records.Resource;
 import org.apache.hadoop.yarn.server.nodemanager.Context;
 import org.apache.hadoop.yarn.server.nodemanager.containermanager.container.Container;
+import org.apache.hadoop.yarn.server.nodemanager.webapp.ContainerLogsUtils;
+
+import java.io.File;
+import java.util.ArrayList;
+import java.util.List;
 
 @XmlRootElement(name = "container")
 @XmlAccessorType(XmlAccessType.FIELD)
@@ -50,15 +53,18 @@ public class ContainerInfo {
   @XmlTransient
   protected String exitStatus;
 
+  @XmlElementWrapper
+  protected List<String> containerLogFiles;
+
   public ContainerInfo() {
   } // JAXB needs this
 
   public ContainerInfo(final Context nmContext, final Container container) {
-    this(nmContext, container, "", "");
+    this(nmContext, container, "", "", "");
   }
 
   public ContainerInfo(final Context nmContext, final Container container,
-       String requestUri, String pathPrefix) {
+       String requestUri, String pathPrefix, String remoteUser) {
 
     this.id = container.getContainerId().toString();
     this.nodeId = nmContext.getNodeId().toString();
@@ -90,6 +96,8 @@ public class ContainerInfo {
     }
     this.containerLogsLink = join(requestUri, pathPrefix,
         this.containerLogsShortLink);
+    this.containerLogFiles =
+        getContainerLogFiles(container.getContainerId(), remoteUser, nmContext);
   }
 
   public String getId() {
@@ -134,6 +142,32 @@ public class ContainerInfo {
 
   public long getVCoresNeeded() {
     return this.totalVCoresNeeded;
+  }
+
+  public List<String> getContainerLogFiles() {
+    return this.containerLogFiles;
+  }
+
+  private List<String> getContainerLogFiles(ContainerId id, String remoteUser,
+      Context nmContext) {
+    List<String> logFiles = new ArrayList<>();
+    try {
+      List<File> logDirs =
+          ContainerLogsUtils.getContainerLogDirs(id, remoteUser, nmContext);
+      for (File containerLogsDir : logDirs) {
+        File[] logs = containerLogsDir.listFiles();
+        if (logs != null) {
+          for (File log : logs) {
+            if (log.isFile()) {
+              logFiles.add(log.getName());
+            }
+          }
+        }
+      }
+    } catch (Exception ye) {
+      return logFiles;
+    }
+    return logFiles;
   }
 
 }
